[gd_scene load_steps=9 format=2]

[ext_resource path="res://Pergunta_1.gd" type="Script" id=1]
[ext_resource path="res://Mouse_Cursor.tscn" type="PackedScene" id=2]
[ext_resource path="res://images/flashcard_frente.png" type="Texture" id=3]
[ext_resource path="res://images/flashcard_tras.png" type="Texture" id=4]
[ext_resource path="res://images/Medal_Platina.png" type="Texture" id=5]
[ext_resource path="res://images/Medal_Prata.png" type="Texture" id=6]
[ext_resource path="res://images/Medal_Bronze.png" type="Texture" id=7]
[ext_resource path="res://images/Medal_Ouro.png" type="Texture" id=8]

[node name="Node2D" type="Node2D"]

[node name="Visao_Perguntas" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="FlashCard_Tras" type="TextureRect" parent="Visao_Perguntas"]
visible = false
margin_left = 326.0
margin_top = 128.0
margin_right = 990.0
margin_bottom = 513.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="Button_Certo" type="Button" parent="Visao_Perguntas/FlashCard_Tras"]
modulate = Color( 0.152941, 1, 0, 0 )
margin_left = 320.0
margin_top = 220.0
margin_right = 390.0
margin_bottom = 299.0
text = "Acerteiiii"

[node name="Button_Errado" type="Button" parent="Visao_Perguntas/FlashCard_Tras"]
modulate = Color( 0.92549, 0.0627451, 0.0627451, 0 )
margin_left = 230.0
margin_top = 219.0
margin_right = 300.0
margin_bottom = 300.0
keep_pressed_outside = true
text = "Erreiiii"

[node name="Texto_Button_Tras" type="Label" parent="Visao_Perguntas/FlashCard_Tras"]
margin_left = 41.0
margin_top = 31.0
margin_right = 412.0
margin_bottom = 133.0
rect_scale = Vector2( 1.5, 1.5 )
align = 1
valign = 1

[node name="FlashCard_Frente" type="TextureRect" parent="Visao_Perguntas"]
margin_left = 327.0
margin_top = 129.0
margin_right = 967.0
margin_bottom = 449.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_group_": true
}

[node name="Button_Flashcard_Front" type="Button" parent="Visao_Perguntas/FlashCard_Frente"]
modulate = Color( 1, 1, 1, 0 )
margin_left = 1.0
margin_top = 1.0
margin_right = 666.0
margin_bottom = 387.0

[node name="Texto_Button_Frente" type="Label" parent="Visao_Perguntas/FlashCard_Frente"]
margin_left = 39.0
margin_top = 31.0
margin_right = 415.0
margin_bottom = 198.0
rect_scale = Vector2( 1.5, 1.5 )
align = 1
valign = 1

[node name="Platina" type="ColorRect" parent="."]
visible = false
margin_left = 241.0
margin_top = 88.0
margin_right = 983.0
margin_bottom = 512.0
color = Color( 0, 0.498039, 0.74902, 1 )

[node name="Sprite" type="Sprite" parent="Platina"]
position = Vector2( 368.5, 68.6875 )
scale = Vector2( 2.22, 1.7725 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="Platina"]
margin_left = 40.0
margin_top = 141.0
margin_right = 306.0
margin_bottom = 202.0
rect_scale = Vector2( 2.5, 2.5 )
text = "Congratulations! you have reached the final maturity! your team is supported by a growth board."
autowrap = true

[node name="Ouro" type="ColorRect" parent="."]
visible = false
margin_left = 241.0
margin_top = 88.0
margin_right = 983.0
margin_bottom = 512.0
color = Color( 0, 0.498039, 0.74902, 1 )

[node name="Sprite" type="Sprite" parent="Ouro"]
position = Vector2( 368.5, 68.6875 )
scale = Vector2( 2.22, 1.7725 )
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Ouro"]
margin_left = 45.0
margin_top = 155.0
margin_right = 308.0
margin_bottom = 220.0
rect_scale = Vector2( 2.5, 2.5 )
text = "You´ve reached the third maturity of vision´s dimension. Now your team uses the product´s vision to make its decisions."
autowrap = true

[node name="Prata" type="ColorRect" parent="."]
visible = false
margin_left = 241.0
margin_top = 88.0
margin_right = 983.0
margin_bottom = 512.0
color = Color( 0, 0.498039, 0.74902, 1 )

[node name="Sprite" type="Sprite" parent="Prata"]
position = Vector2( 368.5, 68.6875 )
scale = Vector2( 2.22, 1.7725 )
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Prata"]
margin_left = 59.0
margin_top = 153.0
margin_right = 310.0
margin_bottom = 218.0
rect_scale = Vector2( 2.5, 2.5 )
text = "You are doing good, here in maturity 2 your team is aware of it´s vision of the product and believe it reflects the objective of it´s work"
autowrap = true

[node name="Bronze" type="ColorRect" parent="."]
visible = false
margin_left = 241.0
margin_top = 88.0
margin_right = 983.0
margin_bottom = 512.0
color = Color( 0, 0.498039, 0.74902, 1 )

[node name="Sprite" type="Sprite" parent="Bronze"]
position = Vector2( 368.5, 68.6875 )
scale = Vector2( 2.22, 1.7725 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="Bronze"]
margin_left = 71.0
margin_top = 142.0
margin_right = 321.0
margin_bottom = 216.0
rect_scale = Vector2( 2.5, 2.5 )
text = "You are in the first maturity of the vision´s dimension. The team doesn't know or doesn't have a vision of the product"
autowrap = true

[node name="SemMedalha" type="ColorRect" parent="."]
visible = false
margin_left = 241.0
margin_top = 88.0
margin_right = 983.0
margin_bottom = 512.0
color = Color( 0, 0.498039, 0.74902, 1 )

[node name="Label" type="Label" parent="SemMedalha"]
margin_left = 42.0
margin_top = 58.0
margin_right = 703.0
margin_bottom = 395.0

[node name="Mouse_Cursor" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="Visao_Perguntas/FlashCard_Tras/Button_Certo" to="Visao_Perguntas" method="_on_Button_Certo_pressed"]
[connection signal="pressed" from="Visao_Perguntas/FlashCard_Tras/Button_Errado" to="Visao_Perguntas" method="_on_Button_Errado_pressed"]
[connection signal="pressed" from="Visao_Perguntas/FlashCard_Frente/Button_Flashcard_Front" to="Visao_Perguntas" method="_on_Button_Flashcard_Front_pressed"]
